--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,7 +98,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #312450;
+		background: #DED5C4;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -115,7 +115,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: rgba(255, 255, 255, 0.55);
+		color: rgb(21, 21, 21);
 		font-family: Georgia, 'Times New Roman', Times, serif;
 		font-size: 16.5pt;
 		font-weight: normal;
@@ -175,7 +175,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #ffffff;
+		color: #151515;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.5em 0;
@@ -307,7 +307,7 @@ input, select, textarea {
 
 	hr {
 		border: 0;
-		border-bottom: solid 1px rgba(255, 255, 255, 0.15);
+		border-bottom: solid 1px rgb(121, 135, 119);
 		margin: 2em 0;
 	}
 
@@ -1833,9 +1833,9 @@ input, select, textarea {
 		transition: border-color 0.2s ease;
 		background-color: transparent;
 		border: solid 1px !important;
-		border-color: rgba(255, 255, 255, 0.15) !important;
+		border-color: rgb(120, 149, 178) !important;
 		border-radius: 3em;
-		color: #ffffff !important;
+		color: #7895B2 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.6em;
@@ -1945,7 +1945,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			border-color: rgba(255, 255, 255, 0.55) !important;
+			border-color: rgb(81, 130, 155) !important;
 		}
 
 			input[type="submit"]:hover:after,
@@ -1965,7 +1965,9 @@ input, select, textarea {
 			input[type="button"]:hover:active,
 			button:hover:active,
 			.button:hover:active {
-				border-color: #ffffff !important;
+				border-color: #9BB0C1 !important;
+				background-color: #C7C8CC !important; /* light blue background color */
+				color: #ffffff !important; /* white text color */
 			}
 
 				input[type="submit"]:hover:active:after,
@@ -2295,7 +2297,7 @@ input, select, textarea {
 		}
 
 	label {
-		color: #ffffff;
+		color: #151515;
 		font-weight: bold;
 		line-height: 1.5;
 		margin: 0 0 0.7em 0;
@@ -2523,7 +2525,7 @@ input, select, textarea {
 			width: 2.5em;
 			height: 2.5em;
 			display: block;
-			background: #ffffff;
+			background: #51829B;
 			border-radius: 100%;
 			color: #312450;
 			text-align: center;
@@ -2536,27 +2538,27 @@ input, select, textarea {
 			}
 
 				.wrapper.style1 .icon.major:before {
-					color: #5e42a6;
+					color: #F9F9F9;
 				}
 
 				.wrapper.style1-alt .icon.major:before {
-					color: #493382;
+					color: #F9F9F9;
 				}
 
 				.wrapper.style2 .icon.major:before {
-					color: #5052b5;
+					color: #F9F9F9;
 				}
 
 				.wrapper.style2-alt .icon.major:before {
-					color: #3e4094;
+					color: #F9F9F9;
 				}
 
 				.wrapper.style3 .icon.major:before {
-					color: #b74e91;
+					color: #F9F9F9;
 				}
 
 				.wrapper.style3-alt .icon.major:before {
-					color: #953d75;
+					color: #F9F9F9;
 				}
 
 /* Image */
@@ -3236,31 +3238,31 @@ input, select, textarea {
 			}
 
 		.wrapper.alt {
-			background-color: #261c3e;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style1-alt {
-			background-color: #493382;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style2 {
-			background-color: #5052b5;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style2-alt {
-			background-color: #3e4094;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style3 {
-			background-color: #b74e91;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.style3-alt {
-			background-color: #953d75;
+			background-color: #F9F9F9;
 		}
 
 		.wrapper.fullscreen {
@@ -3524,7 +3526,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #E8DFCA;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3737,7 +3739,7 @@ input, select, textarea {
 			-ms-transition: color 0.2s ease;
 			transition: color 0.2s ease;
 			border: 0;
-			color: rgba(255, 255, 255, 0.35);
+			color: rgb(21, 21, 21);
 			display: block;
 			font-size: 0.6em;
 			font-weight: bold;
@@ -3761,7 +3763,7 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:before {
-				background: #3c2c62;
+				background: #F9F9F9;
 			}
 
 			#sidebar nav a:after {
@@ -3777,11 +3779,11 @@ input, select, textarea {
 			}
 
 			#sidebar nav a:hover {
-				color: rgba(255, 255, 255, 0.55);
+				color: rgb(48, 89, 115);
 			}
 
 			#sidebar nav a.active {
-				color: #ffffff;
+				color: #151515;
 			}
 
 				#sidebar nav a.active:after {
