--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4121,3 +4121,58 @@ input, select, textarea {
 			animation-duration: 0.2s; 
 			animation-iteration-count: 2;
 		}
+
+		.timeline {
+			position: relative;
+			max-width: 800px;
+			margin: 0 auto;
+		}
+		
+		.timeline-item {
+			padding: 5px 20px; /* Reduced padding to make the height narrower */
+			position: relative;
+			background: inherit;
+			width: 50%;
+			margin-top: 20px; /* Adjust this value to control the space above each item */
+		}
+		
+		.timeline-item:nth-child(odd) {
+			left: 0;
+		}
+		
+		.timeline-item:nth-child(even) {
+			left: 50%;
+		}
+		
+		.timeline-item::after {
+			content: '';
+			position: absolute;
+			width: 25px;
+			height: 25px;
+			right: -12.5px;
+			background-color: #F5F7F8;
+			border: 4px solid #FF9F55;
+			top: 15px;
+			border-radius: 50%;
+			z-index: 1;
+		}
+		
+		.timeline-item:nth-child(even)::after {
+			left: -12.5px;
+		}
+		
+		.timeline-content {
+			padding: 10px 15px; /* Reduced padding to make the height narrower */
+			background-color: inherit;
+			position: relative;
+			border-radius: 6px;
+		}
+		
+		.timeline-content h3 {
+			margin-top: 0;
+			color: #000;
+		}
+		
+		.timeline-content p {
+			margin: 0;
+		}
